# server/service/tracker/router.go
@@ -1,21 +1,22 @@
 package tracker
 
 import (
-	"VyacheslavKuchumov/test-backend/service/auth"
-	"VyacheslavKuchumov/test-backend/types"
-
 	"github.com/go-chi/chi/v5"
 )
 
-func RegisterRoutes(r chi.Router, handler *Handler, userStore types.UserStore) {
+func RegisterRoutes(r chi.Router, handler *Handler) {
 	r.Route("/goals", func(r chi.Router) {
-		r.Get("/", auth.WithJWTAuth(handler.HandleGetGoals, userStore))
-		r.Post("/", auth.WithJWTAuth(handler.HandleCreateGoal, userStore))
-		r.Post("/{goalID}/tasks", auth.WithJWTAuth(handler.HandleCreateTask, userStore))
+		r.Get("/", handler.HandleGetGoals)
+		r.Post("/", handler.HandleCreateGoal)
+		r.Put("/{goalID}", handler.HandleUpdateGoal)
+		r.Delete("/{goalID}", handler.HandleDeleteGoal)
+		r.Post("/{goalID}/tasks", handler.HandleCreateTask)
 	})
 
 	r.Route("/tasks", func(r chi.Router) {
-		r.Get("/assigned", auth.WithJWTAuth(handler.HandleGetAssignedTasks, userStore))
-		r.Put("/{taskID}/assign", auth.WithJWTAuth(handler.HandleAssignTask, userStore))
+		r.Get("/assigned", handler.HandleGetAssignedTasks)
+		r.Put("/{taskID}", handler.HandleUpdateTask)
+		r.Delete("/{taskID}", handler.HandleDeleteTask)
+		r.Put("/{taskID}/assign", handler.HandleAssignTask)
 	})
 }
